[package]
name = "millegrilles_senseurspassifs"
version = "2023.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
env_logger = "0.9.0"
millegrilles_common_rust = { path = "millegrilles_common_rust" }
serde = { version = "1.0", features = ["derive"] }
