[package]
name = "millegrilles_senseurspassifs"
version = "2024.9.41"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
millegrilles_common_rust = { git = "https://github.com/dugrema/millegrilles_common_rust.git", tag = "2024.9-release" }
# millegrilles_common_rust = { git = "https://github.com/dugrema/millegrilles_common_rust.git", branch = "master" }
# millegrilles_common_rust = { path = "/home/mathieu/RustroverProjects/millegrilles_common_rust" }

log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
chrono-tz = "0.10.0"
